--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Backbone.js • TodoMVC</title>
+		<title>Backbone.js • TodoMVC CypressF</title>
 		<link rel="stylesheet" href="components/todomvc-common/base.css">
 	</head>
 	<body>
