--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -27,7 +27,7 @@
 		<script type="text/template" id="item-template">
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
-				<label><%- title %></label>
+				<label><%- title %> <%- user %></label>
 				<button class="destroy"></button>
 			</div>
 			<input class="edit" value="<%- title %>">
