--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -23,6 +23,7 @@
 			<header id="header">
 				<h1>todos</h1>
 				<input id="new-todo" placeholder="What needs to be done?" autofocus>
+				<input id="new-user" placeholder="Who?">
 			</header>
 			<section id="main">
 				<input id="toggle-all" type="checkbox">
